fix overlaping styles(border-radius, box-shadow) of parent element with pseudo element before

--- a/scss/components/_yota-accessories.scss
+++ b/scss/components/_yota-accessories.scss
@@ -56,6 +56,7 @@
       right: 0;
       bottom: 0;
       background-color: $additional-green;
+      box-shadow: 0.391px 0.921px 9px 0px rgba(46, 50, 50, 0.55);
       border-radius: 0 0 4px 4px;
     }
   }
